<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_title_b"
        app:layout_constraintEnd_toEndOf="@id/guideline_gen9_end"
        app:layout_constraintStart_toStartOf="@id/guideline_gen9_start"
        app:layout_constraintTop_toTopOf="@id/guideline_title"
        app:srcCompat="@drawable/pokedex" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_title_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_gen1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/fighting_bg"
        android:foreground="?android:attr/selectableItemBackground"
        android:contentDescription="@string/generation_1"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline_gen1e2b"
        app:layout_constraintTop_toBottomOf="@+id/guideline_gen1e2">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/generation_i"
            android:layout_margin="4dp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_gen2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/grass_bg"
        android:foreground="?android:attr/selectableItemBackground"
        android:contentDescription="@string/generation_2"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintBottom_toBottomOf="@id/guideline_gen1e2b"
        app:layout_constraintTop_toBottomOf="@+id/guideline_gen1e2">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/generation_ii"
            android:layout_margin="4dp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_gen3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/electric_bg"
        android:foreground="?android:attr/selectableItemBackground"
        android:contentDescription="@string/generation_3"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline_gen3e4b"
        app:layout_constraintTop_toBottomOf="@+id/guideline_gen3e4">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/generation_iii"
            android:layout_margin="4dp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_gen4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/water_bg"
        android:foreground="?android:attr/selectableItemBackground"
        android:contentDescription="@string/generation_4"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintBottom_toBottomOf="@id/guideline_gen3e4b"
        app:layout_constraintTop_toBottomOf="@+id/guideline_gen3e4">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/generation_iv"
            android:layout_margin="4dp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_gen5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/poison_bg"
        android:foreground="?android:attr/selectableItemBackground"
        android:contentDescription="@string/generation_5"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline_gen5e6b"
        app:layout_constraintTop_toBottomOf="@+id/guideline_gen5e6">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/generation_v"
            android:layout_margin="4dp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_gen6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/fire_bg"
        android:foreground="?android:attr/selectableItemBackground"
        android:contentDescription="@string/generation_6"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintBottom_toBottomOf="@id/guideline_gen5e6b"
        app:layout_constraintTop_toBottomOf="@+id/guideline_gen5e6">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/generation_vi"
            android:layout_margin="4dp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_gen7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/steel_bg"
        android:foreground="?android:attr/selectableItemBackground"
        android:contentDescription="@string/generation_7"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline_gen7e8b"
        app:layout_constraintTop_toBottomOf="@+id/guideline_gen7e8">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/generation_vii"
            android:layout_margin="4dp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_gen8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/psychic_bg"
        android:foreground="?android:attr/selectableItemBackground"
        android:contentDescription="@string/generation_8"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintBottom_toBottomOf="@id/guideline_gen7e8b"
        app:layout_constraintTop_toBottomOf="@+id/guideline_gen7e8">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/generation_viii"
            android:layout_margin="4dp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_gen9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/rock_bg"
        android:foreground="?android:attr/selectableItemBackground"
        android:contentDescription="@string/generation_9"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_gen9_end"
        app:layout_constraintStart_toStartOf="@id/guideline_gen9_start"
        app:layout_constraintBottom_toBottomOf="@id/guideline_gen9b"
        app:layout_constraintTop_toBottomOf="@+id/guideline_gen9">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/generation_ix"
            android:layout_margin="4dp"/>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.48" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.52" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_gen9_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.26" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_gen9_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.74" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_gen1e2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_gen1e2b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.28" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_gen3e4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_gen3e4b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.44" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_gen5e6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.46" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_gen5e6b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_gen7e8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.62" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_gen7e8b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.76" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_gen9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.78" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_gen9b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />



</androidx.constraintlayout.widget.ConstraintLayout>